Fixing the overflow to show a scrollbar.

--- a/css/application.css
+++ b/css/application.css
@@ -215,3 +215,7 @@ body #content nav#block {
 body footer {
   margin-top: 0.85714286em;
   text-align: center; }
+  
+body#help {
+  overflow: auto;
+}
